--- a/axelor-account/src/main/resources/views/Menu.xml
+++ b/axelor-account/src/main/resources/views/Menu.xml
@@ -1003,8 +1003,7 @@
     parent="account-conf-analytic" action="account.analytic.move.line.search"
     if="__config__.app.getApp('account').getManageAnalyticAccounting()"/>
 
-  <action-view name="account.analytic.move.line.search"
-    title="Analytic move line search/reverse"
+  <action-view name="account.analytic.move.line.search" title="Analytic review"
     model="com.axelor.apps.account.db.AnalyticMoveLineQuery">
     <view type="grid" name="analytic-move-line-query-grid"/>
     <view type="form" name="analytic-move-line-query-form"/>
